Spike spawning beta